Fix the link styles in CodeMirror to work in dark mode.
We were using the default CodeMirror link styles, which weren't legible
in dark mode. We now use the standard Ink link styling for these.

Testing Done:
Tested the links in both light and dark mode, both in Markdown `[...](...)`
form and plain URL form.

Reviewed at https://reviews.reviewboard.org/r/13816/

--- a/reviewboard/static/rb/css/syntax.less
+++ b/reviewboard/static/rb/css/syntax.less
@@ -145,6 +145,14 @@
   font-style: italic;
 }
 
+/*
+ * CodeMirror: Link
+ */
+.cm-s-rb .cm-link {
+  color: var(--ink-p-link-color);
+  text-decoration: none;
+}
+
 /* Pygments: Error */
 .err {
 }
